--- a/backend/backend/package.json
+++ b/backend/backend/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.4",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.7",
@@ -31,6 +32,7 @@
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "mysql2": "^3.11.3",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
